StartPage changed to VMMV

--- a/QuizAppMobile/QuizAppMobile.csproj
+++ b/QuizAppMobile/QuizAppMobile.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="StartPage.xaml.cs">
+    <Compile Update="Views\StartPage.xaml.cs">
       <DependentUpon>StartPage.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
