--- a/QuizAppMobile/QuizAppMobile.csproj
+++ b/QuizAppMobile/QuizAppMobile.csproj
@@ -26,7 +26,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Styles\FontAwesome.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\HomePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\LobbyPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\LoginPage.xaml">
